--- a/my-app/src/styles/Upload.css
+++ b/my-app/src/styles/Upload.css
@@ -1,5 +1,5 @@
 /* 전체 배경색 설정 */
-body {
+.upload-body {
     background-color: #f0efeb4d; /* 전체 배경색 */
     margin: 0; /* 기본 여백 제거 */
     font-family: Arial, sans-serif; /* 기본 글꼴 설정 */
@@ -14,10 +14,10 @@ body {
 /* 전체 컨테이너 스타일 */
 .upload-container {
     max-width: 500px; /* 최대 너비 설정 */
-    padding: 20px; /* 여백 */
+    padding: 20px 100px 50px 100px; /* 여백 */
+    justify-content: center; /* 수평 중앙 정렬 */
+    align-items: center; /* 수직 중앙 정렬 */
     border: 1px solid #ccc; /* 테두리 */
-    border-radius: 8px; /* 둥근 모서리 */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
     background-color: #ffffff; /* 배경색 */
 }
 
@@ -36,7 +36,6 @@ body {
     padding: 10px; /* 패딩 */
     margin: 10px 0; /* 상하 여백 */
     border: 1px solid #ccc; /* 테두리 */
-    border-radius: 4px; /* 둥근 모서리 */
     font-size: 16px; /* 글자 크기 */
 }
 
@@ -44,10 +43,9 @@ body {
 .upload-container button {
     width: 100%; /* 전체 너비 */
     padding: 10px; /* 패딩 */
-    margin-top: 10px; /* 상단 여백 */
+    margin-top: 30px; /* 상단 여백 */
     border: none; /* 테두리 없음 */
-    border-radius: 4px; /* 둥근 모서리 */
-    background-color: #007bff; /* 배경색 */
+    background-color: #000000; /* 배경색 */
     color: white; /* 글자 색 */
     font-size: 16px; /* 글자 크기 */
     cursor: pointer; /* 포인터 커서 */
@@ -56,5 +54,7 @@ body {
 
 /* 버튼 호버 스타일 */
 .upload-container button:hover {
-    background-color: #0056b3; /* 호버 시 배경색 변경 */
+    background-color: #f0efeb4d; /* 호버 시 배경색 변경 */
+    color: rgb(56, 55, 55); /* 글자 색 */
+    border: 1px solid #000000; /* 테두리 */
 }
