--- a/my-app/src/styles/Board.css
+++ b/my-app/src/styles/Board.css
@@ -3,7 +3,7 @@
 /* 전체 게시판 스타일 */
 .board-container {
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #f0efeb4d;  /* 메인색상으로 게시판 */
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
@@ -12,6 +12,7 @@
   .board-title {
     font-size: 24px;
     margin-bottom: 20px;
+    
   }
   
   /* 글쓰기 버튼 스타일 */
@@ -23,7 +24,19 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+    transition: background-color 0.3s;
+  }
+  /* 홈으로가기 버튼스타일 */
+  .write-back-button{
+    padding: 10px 20px;
+    background-color: #b4b09fb4; /* 버튼 색상 */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 20px;
     transition: background-color 0.3s;
   }
   
