--- a/my-app/src/styles/BoardDetail.css
+++ b/my-app/src/styles/BoardDetail.css
@@ -8,7 +8,7 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    background-color:  /* 메인색상으로 게시판 */;
 }
 
 /* 제목 스타일 */
@@ -31,6 +31,7 @@
     font-size: 0.9em;
     color: #777;
     margin-bottom: 20px;
+   text-align: center;
 }
 
 /* 버튼 스타일 */
@@ -43,8 +44,22 @@
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.3s;
+    text-align: center;
+   
+    
 }
+.back-button{
+    padding: 10px 20px;
+    background-color: #25e75f;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    text-align: center;
+    transition: background-color 0.3s;
 
+}
 .delete-button:hover {
     background-color: #c0392b;
 }
