--- a/my-app/src/styles/Detail.css
+++ b/my-app/src/styles/Detail.css
@@ -1,26 +1,18 @@
 /* 전체 배경색 설정 */
 .detail-body {
-  background-color: #f0efeb4d;
-  /* 전체 배경색 */
-  margin: 0;
-  /* 기본 여백 제거 */
-  font-family: Arial, sans-serif;
-  /* 기본 글꼴 설정 */
+  margin: 0;  /* 기본 여백 제거 */
+  font-family: Arial, sans-serif;  /* 기본 글꼴 설정 */
   min-height: 950px;
-
-  justify-content: center;
-  /* 수평 중앙 정렬 */
-  align-items: center;
-  /* 수직 중앙 정렬 */
-
+  justify-content: center;  /* 수평 중앙 정렬 */
+  align-items: center;  /* 수직 중앙 정렬 */
 }
-
 
 /* 전체 레이아웃 설정 */
 .main-content {
   display: block;
   justify-content: center;
   margin: 50px;
+  
 }
 
 /* CSS for Detail Page */
@@ -39,8 +31,7 @@
 
 .product-image {
   width: 100%;
-  max-width: 400px;
-  /* 이미지 크기 제한 */
+  max-width: 400px;  /* 이미지 크기 제한 */
 }
 
 .detail-float-right {
@@ -51,6 +42,7 @@
 .product-name,
 .product-price {
   margin: 15px 0px;
+  padding-left: 10px;
 }
 
 .product-kind {
@@ -64,32 +56,30 @@
   margin: 15px 0px;
 }
 
-/* 구분선 스타일 */
-.divider {
-  border: none;
-  border-top: 0.5px solid #ccc;
-  /* 연한 회색 구분선 */
-  margin: 2px;
-}
-
 .product-price {
   font-size: 20px;
   color: #0044ff;
   margin-bottom: 10px;
 }
 
+.uploader {
+  margin-left: 70%;
+  }
+  
+/* 구분선 스타일 */
+.divider {
+  border: none;
+  border-top: 0.5px solid #ccc;  /* 연한 회색 구분선 */
+  margin: 2px;
+}
+
 .styled-drop-down,
 .quantity-input {
-  max-width: 350px;
-  /* 너비 제한 */
-  padding: 8px;
-  /* 패딩을 동일하게 설정 */
-  font-size: 14px;
-  /* 폰트 크기 통일 */
-  border: 1px solid #ccc;
-  /* 테두리 스타일 */
-  box-sizing: border-box;
-  /* 박스 크기 포함 */
+  max-width: 350px;  /* 너비 제한 */
+  padding: 8px;  /* 패딩을 동일하게 설정 */;
+  font-size: 14px;  /* 폰트 크기 통일 */
+  border: 1px solid #ccc;  /* 테두리 스타일 */
+  box-sizing: border-box;  /* 박스 크기 포함 */
 }
 
 .detail-options {
@@ -105,11 +95,18 @@
 }
 
 .label-text {
-  min-width: 100px;
-  /* 레이블 최소 너비 설정 */
+  min-width: 100px;  /* 레이블 최소 너비 설정 */
   font-weight: bold;
+  padding-left: 10px;
+  color: #4d4c4c;
   margin-right: 10px;
   align-items: center;
+}
+
+.before-order {
+  flex-direction: row;
+  align-items: center;
+  gap: 10px; /* 항목 간 간격 조정 */
 }
 
 .quantity-input {
@@ -121,7 +118,6 @@
 
 }
 
-
 .order-button,
 .cart-button {
   display: block;
@@ -130,13 +126,14 @@
   margin-top: 10px;
   font-size: 16px;
   cursor: pointer;
+  
 }
 
 .cart-button {
   background-color: #fff;
   color: rgb(56, 55, 55);
   border: 1px solid #000000;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .order-button {
