--- a/my-app/src/styles/Upload.css
+++ b/my-app/src/styles/Upload.css
@@ -1,6 +1,6 @@
 /* 전체 배경색 설정 */
 .upload-body {
-    background-color: #f0efeb4d;    /* 전체 배경색 */
+    background-color: #ffffff;    /* 전체 배경색 */
     margin: 0;    /* 기본 여백 제거 */
     font-family: Arial, sans-serif;    /* 기본 글꼴 설정 */
 
@@ -18,7 +18,7 @@
     justify-content: center;    /* 수평 중앙 정렬 */
     align-items: center;    /* 수직 중앙 정렬 */
     border: 1px solid #ccc;    /* 테두리 */
-    background-color: #ffffff;    /* 배경색 */
+    background-color: #f0efeb4d;    /* 배경색 */
 }
 
 /* 제목 스타일 */
