--- a/my-app/src/styles/Login.css
+++ b/my-app/src/styles/Login.css
@@ -3,10 +3,15 @@
 /* 네비 스타일 */
 .navbar-container {
   display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   height: 80px;
   background-color: #696868;
+  z-index: 100;
 }
 
 .navbar-logo {
@@ -16,8 +21,7 @@
 }
 
 .menu-icon {
-  display: none;
-  /* 초기에는 숨김 */
+  display: none; /* 초기에는 숨김 */
 }
 
 .nav-menu {
@@ -38,11 +42,14 @@
 
 /* 메인 콘텐츠 스타일 */
 .content-wrapper {
+  margin-top: 30px;
+  margin-bottom: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 50px;
-  flex: 1;
+  padding: 20px;
+  overflow-y: auto;
+  z-index: 50;
 }
 
 .welcome-section {
@@ -76,18 +83,14 @@
 
 /* 로그인 폼 스타일 */
 .login-form-container {
-  background-color: rgba(153, 148, 148, 0.1);
-  padding: 60px;
-  /* 패딩을 줄임 */
+  padding: 60px; /* 패딩을 줄임 */
   border-radius: 20px;
-  max-width: 450px;
-  /* 최대 너비를 줄임 */
+  max-width: 450px; /* 최대 너비를 줄임 */
   height: 100%;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0px 20px rgba(153, 147, 147, 0.9);
   text-align: center;
-  background-color: #e6dada;
-  margin: auto;
-  /* 중앙 정렬 */
+  margin: auto; /* 중앙 정렬 */
+  margin-top: 100px;
 }
 
 .login-form-container h2 {
@@ -97,7 +100,7 @@
 
 .login-input {
   width: 100%;
-  padding: 15px;
+  padding: 10px;
   margin-bottom: 20px;
   border-radius: 20px;
   border: none;
@@ -131,7 +134,6 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
-  font-size: 1rem;
 }
 
 .checkbox {
@@ -171,9 +173,14 @@
 /* 푸터 스타일 */
 .footer {
   background-color: #0a1630;
-  height: 150px;
+  height: 80px;
   position: fixed;
-  bottom: 0px;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
 }
 
@@ -185,13 +192,11 @@
 
 .footer-links {
   list-style: none;
-  display: flex;
   justify-content: center;
-  padding: 0;
 }
 
 .footer-links li {
-  margin-left: 20px;
+  margin-right: 25px;
 }
 
 .footer-links a {
@@ -247,19 +252,9 @@
   }
 
   .login-form-container {
-    max-width: 320px;
+    max-width: 300px;
     padding: 20px;
-    margin-top: 5%;
-  }
-
-  .login-input {
-    max-width: 290px;
-  }
-
-  .option_field {
-    max-width: 320px;
-    padding: 10px;
-    text-align: center;
+    margin-top: 10%;
   }
 
   .submit-btn {
