--- a/my-app/src/styles/Register.css
+++ b/my-app/src/styles/Register.css
@@ -1,5 +1,89 @@
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 /* 전체 레이아웃 설정 */
+
+/*nav*/ 
+.navbar {
+  background-color: white;
+  border-bottom: 1px solid #e0e0e0;
+  padding: 15px 20px;
+  box-shadow: none;
+}
+
+.navbar-container {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-menu {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin-top: 80px;
+}
+
+.navbar-menu li {
+  display: inline;
+}
+
+.navbar-menu a {
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+}
+
+.navbar-logo {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.navbar-logo a {
+  text-decoration: none;
+  color: #000;
+  letter-spacing: 6px;
+}
+
+.navbar-icons {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  margin-top: 80px;
+}
+
+.navbar-icons li {
+  display: inline;
+}
+
+.navbar-icons a {
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+}
+
+.fa {
+  font-size: 18px;
+}
+
+.cart-count {
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  padding: 2px 6px;
+  margin-left: 5px;
+  font-size: 12px;
+}
+
+
+/* 메인 콘텐츠 스타일 */
 .register-container {
+  font-family: 'GmarketSansMedium';  /* 기본 글꼴 설정 */
   background-color: #f9f9f9; /* 더 밝고 깔끔한 배경색 */
   padding: 50px;
   border-radius: 15px;
