--- a/my-app/src/styles/Register.css
+++ b/my-app/src/styles/Register.css
@@ -41,7 +41,9 @@
 }
 
 .navbar-logo {
-  font-size: 40px;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 36px;
   font-weight: bold;
 }
 
